# logprinter

./: .gitignore  CMakeLists.txt  README.txt
include/LogPrinter/core/: LogPrinter.h
include/Viewer/core/: Viewer.h
src/: client.cpp  main.cpp
src/LogPrinter/core/: LogPrinter.cpp
src/Viewer/core/: Viewer.cpp
